# mate-background

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  meson.build
desktop/: Makefile.am  Makefile.in  mate-desktop.xml.in.in  meson.build
po/: af.gmo  af.po  am.gmo  am.po  an.gmo  an.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  br.gmo  br.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  cmn.gmo  cmn.po  crh.gmo  crh.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  (+167 more)
